At #424 Fix style selector when Create Template Variable pop-ups overlap

--- a/frontend/src/style/theme/_form-elements.scss
+++ b/frontend/src/style/theme/_form-elements.scss
@@ -218,9 +218,6 @@ textarea.form-control {
 .form-group > .btn {
   display: inline-block;
 }
-.form-group.form-group-type {
-  z-index: 50001;
-}
 .form-group > label,
 label.form-label {
   width: 100%;
