--- a/frontend/src/style/unsorted.scss
+++ b/frontend/src/style/unsorted.scss
@@ -345,6 +345,7 @@ div.dropdown.dropdown-stretch,
 div.dropdown.dropdown-stretch > div.dropdown-toggle,
 div.dropdown.dropdown-stretch > button.dropdown-toggle {
   width: 100%;
+  z-index: 5001;
 }
 
 /*
